<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        layout="@layout/resto_infos_layout"
        />

    <include
        layout="@layout/resto_menu_infos_layout"
        />

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requirement_food_label"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/requirement_food_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/vegan_food_label" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/theForkGreenColor"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:text="@string/see_card_and_menu_label"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews_and_notes_label"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif"
        />

    <include
        layout="@layout/resto_rate_layout"/>

    <include
        layout="@layout/global_rate_layout"/>

</LinearLayout>